--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* #root {
+#root {
   width: 1200px;
   height: 800px;
   margin: 0 auto;
@@ -6,48 +6,34 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
 .horizontalLine {
-  border-top: 3px solid #000;
+  border-top: 3px solid #213446;
   width: 100%;
   border-radius: 10px;
 }
 
 .icons {
   display: flex;
+}
+
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1 {
+  color: 213446;
+}
+
+.todo-form {
+  margin: 20px auto;
+}
+
+.todo-title,
+.todo-content {
+  margin: 0 5px;
+  margin-right: 20px;
 }
